--- a/AdressListWithSwift3/Controller/LeaveList/Leave/LeaveListController.xib
+++ b/AdressListWithSwift3/Controller/LeaveList/Leave/LeaveListController.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeaveListController" customModule="AdressListWithSwift3" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="zYi-ex-9wr" id="PSp-bm-NeA"/>
+                <outlet property="collectionView" destination="bU7-W6-qhD" id="QU1-vk-0Mx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,20 +17,26 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zYi-ex-9wr">
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bU7-W6-qhD">
+                    <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sIn-DC-v0t">
+                        <size key="itemSize" width="100" height="130"/>
+                        <size key="headerReferenceSize" width="1" height="20"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="5"/>
+                    </collectionViewFlowLayout>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="ueJ-dw-csI"/>
-                        <outlet property="delegate" destination="-1" id="4us-de-nay"/>
+                        <outlet property="dataSource" destination="-1" id="oIG-Ds-yKP"/>
+                        <outlet property="delegate" destination="-1" id="NTB-NG-Q7G"/>
                     </connections>
-                </tableView>
+                </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="zYi-ex-9wr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="14T-oX-ns5"/>
-                <constraint firstItem="zYi-ex-9wr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="5g3-du-zvb"/>
-                <constraint firstAttribute="trailing" secondItem="zYi-ex-9wr" secondAttribute="trailing" id="csS-7Z-ijK"/>
-                <constraint firstAttribute="bottom" secondItem="zYi-ex-9wr" secondAttribute="bottom" id="gSA-AG-4Sj"/>
+                <constraint firstAttribute="trailing" secondItem="bU7-W6-qhD" secondAttribute="trailing" id="73o-Gj-K3X"/>
+                <constraint firstItem="bU7-W6-qhD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="LAd-Vg-0g7"/>
+                <constraint firstItem="bU7-W6-qhD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="YNy-xq-nQb"/>
+                <constraint firstAttribute="bottom" secondItem="bU7-W6-qhD" secondAttribute="bottom" id="jFq-xF-fFZ"/>
             </constraints>
         </view>
     </objects>
